# packages/api-contract/openapi.json
@@ -4988,6 +4988,11 @@
             "type": "boolean",
             "example": false,
             "description": "If true, this TMDB item already exists in local DB"
+          },
+          "hasUkrainianLocalization": {
+            "type": "boolean",
+            "example": true,
+            "description": "If false, item has no Ukrainian localization and cannot be imported"
           }
         },
         "required": [
@@ -4996,7 +5001,8 @@
           "tmdbId",
           "title",
           "rating",
-          "isImported"
+          "isImported",
+          "hasUkrainianLocalization"
         ]
       },
       "SearchResponseDto": {
